# soroban-health

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: check-assignment.yml  ci.yml
backend/: .env.example  README.md  requirements-dev.txt  requirements.txt
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/routes/: contracts.py  health.py  scans.py
backend/app/core/: config.py
backend/app/models/: contract.py  scan.py
backend/app/services/: analyzer.py  coverage.py  github_fetch.py  repository.py  rpc.py  scoring.py  soroban_client.py  supabase_client.py
backend/supabase/: schema.sql
backend/tests/: conftest.py  test_analyzer.py  test_coverage.py  test_github_fetch.py  test_repository.py  test_routes_contracts.py  test_routes_scans.py  test_rpc.py  test_scoring.py
contract/: Cargo.toml  README.md
contract/reference/: Cargo.toml
contract/reference/src/: errors.rs  lib.rs  storage.rs  test.rs  ttl.rs
docs/: architecture.md  contract.md  seed-issues.md
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: FindingsList.tsx  HealthHistoryChart.tsx  HealthScoreGauge.tsx
frontend/lib/: api.ts  types.ts
scripts/: git-stage-setup.sh
